@@ -115,10 +115,6 @@ bool bmc_supports_SVA_property(const exprt &expr)
   if(has_subexpr(expr, ID_sva_sequence_first_match))
     return false;
 
-  // sva_sequence_troughout is not supported yet
-  if(has_subexpr(expr, ID_sva_sequence_throughout))
-    return false;
-
   // sva_sequence_within is not supported yet
   if(has_subexpr(expr, ID_sva_sequence_within))
     return false;
