@@ -1206,4 +1206,29 @@ to_sva_sequence_intersect_expr(exprt &expr)
   return static_cast<sva_sequence_intersect_exprt &>(expr);
 }
 
+class sva_sequence_throughout_exprt : public binary_exprt
+{
+public:
+  sva_sequence_throughout_exprt(exprt op0, exprt op1)
+    : binary_exprt(std::move(op0), ID_sva_sequence_throughout, std::move(op1))
+  {
+  }
+};
+
+static inline const sva_sequence_throughout_exprt &
+to_sva_sequence_throughout_expr(const exprt &expr)
+{
+  PRECONDITION(expr.id() == ID_sva_sequence_throughout);
+  sva_sequence_throughout_exprt::check(expr, validation_modet::INVARIANT);
+  return static_cast<const sva_sequence_throughout_exprt &>(expr);
+}
+
+static inline sva_sequence_throughout_exprt &
+to_sva_sequence_throughout_expr(exprt &expr)
+{
+  PRECONDITION(expr.id() == ID_sva_sequence_throughout);
+  sva_sequence_throughout_exprt::check(expr, validation_modet::INVARIANT);
+  return static_cast<sva_sequence_throughout_exprt &>(expr);
+}
+
 #endif
